-feat: add section working-method html

--- a/src/index.html
+++ b/src/index.html
@@ -340,13 +340,176 @@
             <!-- /.container -->
         </section>
         <!-- /.section.design-project -->
-        <section class="working-methods">
+        <section class="working-methods section section_dark">
             <div class="container">
-
+                <div class="row">
+                    <div class="working-methods__text">
+                        <div class="section-title section-title_left projects__section-title">
+                            <p class="section-title__subtitle">как мы работаем</p>
+                            <h2 class="section-title__heading section-title__heading_primary">6 шагов<div class="section-title__word">до цели</div></h2>
+                        </div>
+                        <!-- /.section-title -->
+                        <div class="swiper working-methods__swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number">1/6</div>
+                                    <h3 class="swiper-slide__heading">Выезд на замеры помещения</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number">2/6</div>
+                                    <h3 class="swiper-slide__heading">Составление сметы</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number"></div>
+                                    <h3 class="swiper-slide__heading">Разработка  дизайн проекта</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number"></div>
+                                    <h3 class="swiper-slide__heading">Закупка расходных материалов</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number"></div>
+                                    <h3 class="swiper-slide__heading">Ремонтно-отделочные работы</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__progress-number"></div>
+                                    <h3 class="swiper-slide__heading">Приемка-сдача работ</h3>
+                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                </div>
+                                <!-- /.swiper-slide -->
+                            </div>
+                            <!-- /.swiper-wrapper -->
+                            <div class="swiper__buttons">
+                                <div class="swiper-button-prev"></div>
+                                <!-- /.swiper-button-prev -->
+                                <div class="swiper-pagination"></div>
+                                <!-- /.swiper-pagination -->
+                                <div class="swiper-button-next"></div>
+                                <!-- /.swiper-button-next -->
+                            </div>
+                            <!-- /.swiper__buttons -->
+                        </div>
+                        <!-- /.swiper working-methods__swiper -->
+                    </div>
+                    <!-- /.working-method__text -->
+                    <div class="working-methods__image">
+                        <div class="swiper working-methods__swiper">
+                            <div class="swiper-navigation row">
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                        <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                        <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                        <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                        <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                                <div class="col-30">
+                                    <div class="swiper-navigation__card">
+                                        <div class="swiper-navigation__number">1</div>
+                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+</p>
+                                    </div>
+                                    <!-- /.swiper-navigation -->
+                                </div>
+                                <!-- /.col-30 -->
+                            </div>
+                            <!-- /.swiper__navigation -->
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                </div>
+                                <!-- /.swiper-slide -->
+                            </div>
+                            <!-- /.swiper-wrapper -->
+                        </div>
+                        <!-- /.swiper working-methods__swiper -->
+                    </div>
+                    <!-- /.working-methods__images -->
+                </div>
+                <!-- /.row -->
             </div>
             <!-- /.container -->
         </section>
-        <!-- /.working-methods -->
+        <!-- /.working-methods section section_dark -->
         <section class="section command">
             <div class="container">
                 <div class="section-title">
