feat: add styles working-methods section

--- a/src/index.html
+++ b/src/index.html
@@ -353,43 +353,43 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number">1/6</div>
-                                    <h3 class="swiper-slide__heading">Выезд на замеры помещения</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Выезд на замеры помещения</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.<br><br> 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number">2/6</div>
-                                    <h3 class="swiper-slide__heading">Составление сметы</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Составление сметы</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
-                                    <h3 class="swiper-slide__heading">Разработка  дизайн проекта</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Разработка  дизайн проекта</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
-                                    <h3 class="swiper-slide__heading">Закупка расходных материалов</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Закупка расходных материалов</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
-                                    <h3 class="swiper-slide__heading">Ремонтно-отделочные работы</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Ремонтно-отделочные работы</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
-                                    <h3 class="swiper-slide__heading">Приемка-сдача работ</h3>
-                                    <p class="swiper-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                    <h3 class="swiper-slide__heading swiper-slide__heading_sm">Приемка-сдача работ</h3>
+                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
@@ -412,61 +412,49 @@
                         <div class="swiper working-methods__swiper">
                             <div class="swiper-navigation row">
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
-                                        <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                    <div class="swiper-navigation__card swiper-navigation__card_active">
+                                        <div class="swiper-navigation__number">01</div>
+                                        <p class="swiper-navigation__text">Выезд на замер помещения</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
                                     <div class="swiper-navigation__card">
-                                    <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                    <div class="swiper-navigation__number">02</div>
+                                        <p class="swiper-navigation__text">Составление сметы</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
                                     <div class="swiper-navigation__card">
-                                        <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                        <div class="swiper-navigation__number">03</div>
+                                        <p class="swiper-navigation__text">Разработка  дизайн проекта</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
                                     <div class="swiper-navigation__card">
-                                        <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                        <div class="swiper-navigation__number">04</div>
+                                        <p class="swiper-navigation__text">Закупка расходных материалов</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
                                     <div class="swiper-navigation__card">
-                                        <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                        <div class="swiper-navigation__number">05</div>
+                                        <p class="swiper-navigation__text">Ремонтно-отделочные работы</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
                                     <div class="swiper-navigation__card">
-                                        <div class="swiper-navigation__number">1</div>
-                                        <p class="swiper-navigation__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
-</p>
+                                        <div class="swiper-navigation__number">06</div>
+                                        <p class="swiper-navigation__text">Приемка-сдача работ</p>
                                     </div>
                                     <!-- /.swiper-navigation -->
                                 </div>
