--- a/src/index.html
+++ b/src/index.html
@@ -352,14 +352,14 @@
                         <div class="swiper working-methods__swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__progress-number">1/6</div>
+                                    <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Выезд на замеры помещения</h3>
                                     <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.<br><br> 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__progress-number">2/6</div>
+                                    <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Составление сметы</h3>
                                     <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
                                         Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
@@ -412,7 +412,7 @@
                         <div class="swiper working-methods__swiper">
                             <div class="swiper-navigation row">
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card swiper-navigation__card_active">
+                                    <div class="swiper-navigation__card" data-navigation-number="0">
                                         <div class="swiper-navigation__number">01</div>
                                         <p class="swiper-navigation__text">Выезд на замер помещения</p>
                                     </div>
@@ -420,7 +420,7 @@
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__card" data-navigation-number="1">
                                     <div class="swiper-navigation__number">02</div>
                                         <p class="swiper-navigation__text">Составление сметы</p>
                                     </div>
@@ -428,7 +428,7 @@
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__card" data-navigation-number="2">
                                         <div class="swiper-navigation__number">03</div>
                                         <p class="swiper-navigation__text">Разработка  дизайн проекта</p>
                                     </div>
@@ -436,7 +436,7 @@
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__card" data-navigation-number="3">
                                         <div class="swiper-navigation__number">04</div>
                                         <p class="swiper-navigation__text">Закупка расходных материалов</p>
                                     </div>
@@ -444,7 +444,7 @@
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__card" data-navigation-number="4">
                                         <div class="swiper-navigation__number">05</div>
                                         <p class="swiper-navigation__text">Ремонтно-отделочные работы</p>
                                     </div>
@@ -452,7 +452,7 @@
                                 </div>
                                 <!-- /.col-30 -->
                                 <div class="col-30">
-                                    <div class="swiper-navigation__card">
+                                    <div class="swiper-navigation__card" data-navigation-number="5">
                                         <div class="swiper-navigation__number">06</div>
                                         <p class="swiper-navigation__text">Приемка-сдача работ</p>
                                     </div>
