feat: add webp images

--- a/src/index.html
+++ b/src/index.html
@@ -136,15 +136,15 @@
                         <div class="swiper projects__swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="./img/project-1.jpg" alt="project-1">
+                                    <img src="./img/project-1.webp" alt="project-1">
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <img src="./img/project-1.jpg" alt="project-1">
+                                    <img src="./img/project-1.webp" alt="project-1">
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <img src="./img/project-1.jpg" alt="project-1">
+                                    <img src="./img/project-1.webp" alt="project-1">
                                 </div>
                                 <!-- /.swiper-slide -->
                             </div>
@@ -183,7 +183,7 @@
                     <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
-                                <img src="./img/repair-1.jpg" alt="repair">
+                                <img src="./img/repair-1.webp" alt="repair">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Косметический ремонт</h3>
@@ -204,7 +204,7 @@
                     <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
-                                <img src="./img/repair-2.jpg" alt="repair">
+                                <img src="./img/repair-2.webp" alt="repair">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Капитальный ремонт</h3>
@@ -225,7 +225,7 @@
                     <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
-                                <img src="./img/repair-3.jpg" alt="repair">
+                                <img src="./img/repair-3.webp" alt="repair">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Дизайнерский ремонт</h3>
@@ -276,7 +276,7 @@
                     <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
-                                <img src="./img/design-1.jpg" alt="Минимальный">
+                                <img src="./img/design-1.webp" alt="Минимальный">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Минимальный</h3>
@@ -293,7 +293,7 @@
                     <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
-                                <img src="./img/design-2.jpg" alt="Стандартный">
+                                <img src="./img/design-2.webp" alt="Стандартный">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Стандартный</h3>
@@ -313,7 +313,7 @@
                     <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
-                                <img src="./img/design-3.jpg" alt="Полный">
+                                <img src="./img/design-3.webp" alt="Полный">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Полный</h3>
@@ -463,27 +463,27 @@
                             <!-- /.swiper__navigation -->
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
-                                    <div class="swiper-slide__image"><img src="./img/method-1.jpg" alt="method"></div>
+                                    <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
                                 <!-- /.swiper-slide -->
                             </div>
