--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
         <!-- /.projects -->
         <section class="section control">
             <div class="container">
-                <div class="section-title control__title">
+                <div class="section-title control__section-title">
                     <h2 class="section-title__heading section-title__heading_white">онлайн контроль</h2>
                     <div class="section-title__image">
                         <img src="./img/control.svg" alt="control">
@@ -168,7 +168,7 @@
                 </div>
                 <!-- /.section-title -->
                 <div class="video control__video">
-                    <button class="video__button"></button>
+                    <button class="video__play"></button>
                 </div>
                 <!-- /.control__video -->
                 <p class="section__text control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
@@ -196,7 +196,7 @@
         <!-- /.section.control -->
         <section class="section repair-types">
             <div class="container">
-                <div class="section-title repair-types__title">
+                <div class="section-title repair-types__section-title">
                     <h2 class="section-title__heading">Виды ремонта</h2>
                     <div class="section-title__image">
                         <img src="./img/repair.svg" alt="repair">
@@ -288,7 +288,7 @@
         <!-- /.repair-styles -->
         <section class="section design-project">
             <div class="container">
-                <div class="section-title design-project__title">
+                <div class="section-title design-project__section-title">
                     <h2 class="section-title__heading design-project__heading">Дизайн проект</h2>
                     <div class="section-title__image">
                         <img src="./img/design.svg" alt="design">
