--- a/src/index.html
+++ b/src/index.html
@@ -174,20 +174,20 @@
                 <p class="section__text control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
                 <!-- /.section__text control__text -->
                 <form class="control__form">
-                    <div class="input-group control__input-group">
-                        <label for="name" class="label control__label label_gray">Имя</label>
-                        <input id="name" type="text" class="input control__input input_light" placeholder="Как вас зовут:">
+                    <div class="control__input-group">
+                        <label for="control-name" class="label control__label label_gray">Имя</label>
+                        <input id="control-name" type="text" class="input control__input input_light" placeholder="Как вас зовут:">
                     </div>
-                    <!-- /.input-group -->
-                    <div class="input-group control__input-group">
-                        <label for="phone" class="label control__label label_gray">Телефон</label>
-                        <input id="phone" type="tel" class="input control__input input_light" placeholder="Ваш номер телефона:">
+                    <!-- /.control__input-group -->
+                    <div class="control__input-group">
+                        <label for="control-phone" class="label control__label label_gray">Телефон</label>
+                        <input id="control-phone" type="tel" class="input control__input input_light" placeholder="Ваш номер телефона:">
                     </div>
-                    <!-- /.input-group -->                    
+                    <!-- /.control__input-group -->                
                     <button class="button control__button button_primary">Отправить</button>
                     <div class="policy control__policy">
-                        <input id="agree" type="checkbox" class="checkbox policy__checkbox" checked>
-                        <label for="agree" class="policy__label">Я соглашаюсь с обработкой данных</label>
+                        <input id="control-agree" type="checkbox" class="checkbox policy__checkbox" checked>
+                        <label for="control-agree" class="policy__label">Я соглашаюсь с обработкой данных</label>
                     </div>
                 </form>
                 <!-- /.control__form -->
@@ -586,15 +586,15 @@
                 Оставьте заявку и наш менеджер свяжется с вами 
             </p>
             <form class="modal__form">
-                <label for="name" class="label modal__label label_light">Имя</label>
-                <input id="name" type="text" class="input modal__input input_dark" placeholder="Как вас зовут:">
-                <label for="phone" class="label modal__label label_light">Телефон</label>
-                <input id="phone" type="tel" class="input modal__input input_dark" placeholder="Ваш номер телефона:">
-                <label for="email" class="label modal__label label_light">Email</label>
-                <input id="email" type="email" class="input modal__input input_dark" placeholder="Ваш email">
+                <label for="modal-name" class="label modal__label label_light">Имя</label>
+                <input id="modal-name" type="text" class="input modal__input input_dark" placeholder="Как вас зовут:">
+                <label for="modal-phone" class="label modal__label label_light">Телефон</label>
+                <input id="modal-phone" type="tel" class="input modal__input input_dark" placeholder="Ваш номер телефона:">
+                <label for="modal-email" class="label modal__label label_light">Email</label>
+                <input id="modal-email" type="email" class="input modal__input input_dark" placeholder="Ваш email">
                 <div class="policy modal__policy">
-                    <input id="agree" type="checkbox" class="checkbox policy__checkbox" checked>
-                    <label for="agree" class="policy__label">Я соглашаюсь с обработкой данных</label>
+                    <input id="modal-agree" type="checkbox" class="checkbox policy__checkbox" checked>
+                    <label for="modal-agree" class="policy__label">Я соглашаюсь с обработкой данных</label>
                 </div>
                 <button class="button modal__button button_primary">Отправить заявку</button>
             </form>
